--- a/CSS basic/main.css
+++ b/CSS basic/main.css
@@ -2,10 +2,13 @@
   /* border: 2px solid black; */
 }
 .header a {
+  border: 3px solid black;
+
   display: inline-block;
   color: red;
   text-decoration: none;
   font-size: 25px;
   margin-left: 50px;
   margin-top: 40px;
+  padding: 15px;
 }
