--- a/CSS basic/main.css
+++ b/CSS basic/main.css
@@ -91,4 +91,36 @@ visibility: hidden; */
     border: 3px solid red;
     display: inline;
 }
+.my-table{
+    padding: 200px;
+    background-color: lightgrey;
+    margin-top: 20px;
+}
+.table-container{
+    width: 50%;
+    margin: auto;
+    background-color: bisque;
+    padding: 50px;
+}
+.table-container table{
+    border: 2px solid black;
+    border-collapse: collapse;
+    
+}
+
+.table-container table th {
+    border: 2px solid black;
+    padding: 15px;
+    background-color: green;
+    color: white;
+    
+}
+.table-container table td{
+    border: 2px solid black;
+    padding: 15px;
+    
+    color: black;
+    background-color: white;
+    
+}
     
