--- a/CSS basic/style.css
+++ b/CSS basic/style.css
@@ -6,12 +6,14 @@
 body {
   background-color: lightblue;
   background: url("background.jpg");
-  background-size: 13000px 750px;
+  /* background-size: 13000px 750px; */
   /* prothom ta width porer ta height eta korle boro dekhabe na  */
+  background-size: contain;
+  /*  responsiveness er jonno px shoray size contain kore dilam*/
   background-repeat: no-repeat;
   /* eta korle bar bar repeat hbe na */
-  background-attachment: fixed;
-  /* scroll dile backgroud shoho scroll hbe  */
+  background-attachment: scroll;
+  /* fixed dile backgroud shoho scroll hbe na */
 }
 p {
   color: yellow;
